--- a/man/ghi.1.html
+++ b/man/ghi.1.html
@@ -86,9 +86,9 @@ manage your issues from the comfort of the command line and your editor of
 choice.</p>
 
 <p>GHI should look familiar if you're familiar with Git. When invoked from a
-repository directory with a GitHub remote, GHI will default to work with the
-repository's issues. Otherwise, GHI will work with your global issues or with a
-repository terminating its arguments.</p>
+repository directory that has a GitHub remote, GHI will work with that
+repository's issues by default. Otherwise, GHI will work with your global
+issues or with a repository specified in its terminating arguments.</p>
 
 <p>The <var>command</var> is either the name of a GHI command (see below) or an alias.</p>
 
