Add `ghi lock` and `ghi unlock` commands
A while back, I [added support for locking and unlocking issues via the
API](https://developer.github.com/changes/2016-02-11-issue-locking-api/).
This underwent a lengthy preview period that, as of today, [is
over](https://developer.github.com/changes/2016-06-22-issue-locking-api-is-now-official/).

With the preview media type no longer required in the `Accept` header, I
thought I'd go ahead and quickly add the commands `ghi lock` and `ghi
unlock`. These are both fairly straightforward commands, though I did
keep the `-m` option that's also present on `ghi close` to provide a
comment before locking (or unlocking) the given issue.

Signed-off-by: David Celis <me@davidcel.is>

--- a/man/ghi.1.html
+++ b/man/ghi.1.html
@@ -111,6 +111,8 @@ is named, this option will bring up the manual page for that command.</p>
 <dl>
 <dt><code>ghi-assign</code>(1)</dt><dd><p>Assign an issue to yourself (or someone else).</p></dd>
 <dt><code>ghi-close</code>(1)</dt><dd><p>Close an issue.</p></dd>
+<dt><code>ghi-lock</code>(1)</dt><dd><p>Lock an issue's conversation, limiting it to collaborators.</p></dd>
+<dt><code>ghi-unlock</code>(1)</dt><dd><p>Unlock an issue's conversation, opening it to all viewers.</p></dd>
 <dt><code>ghi-comment</code>(1)</dt><dd><p>Leave a comment on an issue.</p></dd>
 <dt><code>ghi-config</code>(1)</dt><dd><p>Configure GHI.</p></dd>
 <dt><code>ghi-edit</code>(1)</dt><dd><p>Modify an existing issue.</p></dd>
@@ -158,7 +160,7 @@ at <a href="https://github.com/stephencelis/ghi/contributors" data-bare-link="tr
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'>Stephen Celis</li>
-    <li class='tc'>April 2012</li>
+    <li class='tc'>June 2016</li>
     <li class='tr'>ghi(1)</li>
   </ol>
 
